--- a/blueocean-pipeline-editor/package.json
+++ b/blueocean-pipeline-editor/package.json
@@ -46,6 +46,7 @@
     "gulp-mocha": "2.2.0",
     "gulp-typescript": "4.0.1",
     "jest": "19.0.2",
+    "jest-cli": "19.0.2",
     "jsdom": "7.2.2",
     "mocha": "2.4.5",
     "nock": "8.0.0",
@@ -57,8 +58,8 @@
   "dependencies": {
     "@jenkins-cd/blueocean-core-js": "0.0.171",
     "@jenkins-cd/design-language": "0.0.162",
-    "@jenkins-cd/js-extensions": "0.0.42",
     "@jenkins-cd/js-modules": "0.0.10",
+    "@jenkins-cd/js-extensions": "0.0.44",
     "lodash.debounce": "4.0.8",
     "mobx": "2.6.0",
     "mobx-react": "3.5.7",
