--- a/jenkins-design-language/package.json
+++ b/jenkins-design-language/package.json
@@ -47,6 +47,7 @@
   "dependencies": {
     "@jenkins-cd/blueocean-material-icons": "0.0.7",
     "@jenkins-cd/js-modules": "0.0.10",
+    "@jenkins-cd/js-extensions": "0.0.44",
     "linkifyjs": "2.1.4",
     "lodash.debounce": "4.0.8",
     "moment": "2.19.3",
