--- a/blueocean-dashboard/package.json
+++ b/blueocean-dashboard/package.json
@@ -54,7 +54,7 @@
     "skin-deep": "0.16.0",
     "ts-jest": "19.0.2",
     "ts-node": "5.0.1",
-    "tsify": "3.0.4",
+    "tsify": "4.0.0",
     "typescript": "2.7.2"
   },
   "dependencies": {
@@ -68,6 +68,7 @@
     "immutable": "3.8.1",
     "isomorphic-fetch": "2.2.1",
     "keymirror": "0.1.1",
+    "lodash.debounce": "4.0.8",
     "mobx": "2.6.0",
     "mobx-react": "3.5.7",
     "mobx-utils": "1.1.2",
