add missing dependencies for test
Signed-off-by: olivier lamy <olamy@apache.org>

--- a/blueocean-github-pipeline/pom.xml
+++ b/blueocean-github-pipeline/pom.xml
@@ -61,6 +61,12 @@
       <artifactId>wiremock-standalone</artifactId>
       <scope>test</scope>
     </dependency>
+    <!-- as async is excluded from unirest-java this one is missing for tests -->
+    <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>apache-httpcomponents-client-4-api</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
