--- a/pom.xml
+++ b/pom.xml
@@ -516,7 +516,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>jira</artifactId>
-            <version>2.5.2-20180503.235159-5</version>
+            <version>2.5.2</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.google.guava</groupId>
