[JENKINS-51058] use last httpcomponents version and snapshot of jira … (#1729)
* [JENKINS-51058] jira plugin version with binary compatibility and proxy configuration fix

Signed-off-by: olivier lamy <olamy@apache.org>

* fix dependencies

Signed-off-by: olivier lamy <olamy@apache.org>

* enforcer is managed with exclusion so use same way

Signed-off-by: olivier lamy <olamy@apache.org>

* add missing dependencies for test

Signed-off-by: olivier lamy <olamy@apache.org>

* add missing dependencies for test

Signed-off-by: olivier lamy <olamy@apache.org>

* fix dependencies

Signed-off-by: olivier lamy <olamy@apache.org>

* no need anymore to exclude com.atlassian.httpclient:atlassian-httpclient-plugin as it is already excluded in jira plugin

Signed-off-by: olivier lamy <olamy@apache.org>

* remove not anymore needed exclusions

Signed-off-by: olivier lamy <olamy@apache.org>

* upgrade with last snapshot after jira pr merged

Signed-off-by: olivier lamy <olamy@apache.org>

* test new snapshot which has proxy support

Signed-off-by: olivier lamy <olamy@apache.org>

* test with last jira snapshot

Signed-off-by: olivier lamy <olamy@apache.org>

* jira plugin 2.5.2 released

Signed-off-by: olivier lamy <olamy@apache.org>

--- a/pom.xml
+++ b/pom.xml
@@ -455,7 +455,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>apache-httpcomponents-client-4-api</artifactId>
-            <version>4.5.3-2.1</version>
+            <version>4.5.5-2.0</version>
         </dependency>
 
         <!-- Other -->
@@ -483,6 +483,10 @@
                 <exclusion>
                     <groupId>org.jenkins-ci</groupId>
                     <artifactId>annotation-indexer</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.httpcomponents</groupId>
+                    <artifactId>httpasyncclient</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -512,7 +516,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>jira</artifactId>
-            <version>2.4.2</version>
+            <version>2.5.2</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.google.guava</groupId>
@@ -527,24 +531,8 @@
                     <artifactId>jackson-core</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>com.atlassian.httpclient</groupId>
-                    <artifactId>atlassian-httpclient-plugin</artifactId>
-                </exclusion>
-                <exclusion>
                     <groupId>org.springframework</groupId>
                     <artifactId>spring-beans</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.httpcomponents</groupId>
-                    <artifactId>httpclient</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.httpcomponents</groupId>
-                    <artifactId>httpmime</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.httpcomponents</groupId>
-                    <artifactId>httpcore</artifactId>
                 </exclusion>
                 <exclusion>
                     <groupId>org.objenesis</groupId>
@@ -765,6 +753,10 @@
                 <exclusion>
                     <groupId>org.apache.httpcomponents</groupId>
                     <artifactId>httpcore</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.httpcomponents</groupId>
+                    <artifactId>httpasyncclient</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
