--- a/blueocean-bitbucket-pipeline/pom.xml
+++ b/blueocean-bitbucket-pipeline/pom.xml
@@ -74,7 +74,7 @@
     <dependency>
       <groupId>io.jenkins.blueocean</groupId>
       <artifactId>blueocean-rest-impl</artifactId>
-      <version>1.6.0-beta-2-SNAPSHOT</version>
+      <version>${project.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
@@ -85,6 +85,7 @@
       <scope>test</scope>
     </dependency>
     <!-- end HttpRequest -->
+
   </dependencies>
 
 </project>
