--- a/pom.xml
+++ b/pom.xml
@@ -516,7 +516,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>jira</artifactId>
-            <version>3.0.0-20180517.113718-1</version>
+            <version>3.0.0</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.google.guava</groupId>
