--- a/blueocean-config/pom.xml
+++ b/blueocean-config/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>io.jenkins.blueocean</groupId>
     <artifactId>blueocean-parent</artifactId>
-    <version>1.6.0</version>
+    <version>1.6.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>blueocean-config</artifactId>
