[JENKINS-52154] expand of passed unit tests:
Signed-off-by: olivier lamy <olamy@apache.org>

--- a/acceptance-tests/src/test/resources/io/blueocean/ath/offline/multibranch/TestResultsErrorStdOutTest/Jenkinsfile
+++ b/acceptance-tests/src/test/resources/io/blueocean/ath/offline/multibranch/TestResultsErrorStdOutTest/Jenkinsfile
@@ -1,3 +1,5 @@
+package io.blueocean.ath.offline.multibranch.TestResultsErrorStdOutTes
+
 node {
     stage 'Stage 1 - scm'
     echo 'Stage 1 - scm'
