--- a/pom.xml
+++ b/pom.xml
@@ -591,7 +591,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>sse-gateway</artifactId>
-            <version>1.15</version>
+            <version>1.16-20180628.234123-2</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
