--- a/pom.xml
+++ b/pom.xml
@@ -744,6 +744,11 @@
         <!-- used in blueocean-pipeline-editor test -->
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>sonar</artifactId>
+            <version>2.8</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>ant</artifactId>
             <version>1.8</version>
         </dependency>
