[FIXED JENKINS-50148] Handle SimpleBuildWrappers in editor (#1786)
* [FIXED JENKINS-50148] Handle SimpleBuildWrappers in editor

* Add withSonarQubeEnv tests, update StepMetadata.json so tests actually
do things.

--- a/blueocean-pipeline-editor/pom.xml
+++ b/blueocean-pipeline-editor/pom.xml
@@ -62,5 +62,15 @@
             <groupId>org.jenkinsci.plugins</groupId>
             <artifactId>pipeline-model-definition</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>sonar</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>ant</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
