--- a/blueocean-pipeline-api-impl/src/test/resources/logging.properties
+++ b/blueocean-pipeline-api-impl/src/test/resources/logging.properties
@@ -5,4 +5,4 @@ java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 java.util.logging.ConsoleHandler.level = ALL
 
 #org.apache.http.wire.level = FINE
-io.jenkins.blueocean.rest.impl.pipeline.level = FINE
+#io.jenkins.blueocean.rest.impl.pipeline.level = FINE
