Remove js-builder

--- a/blueocean-core-js/package.json
+++ b/blueocean-core-js/package.json
@@ -37,11 +37,9 @@
   },
   "dependencies": {
     "@jenkins-cd/design-language": "0.0.162",
-    "@jenkins-cd/js-modules": "0.0.10",
     "@jenkins-cd/logging": "0.0.6",
     "@jenkins-cd/sse-gateway": "0.0.21",
     "@jenkins-cd/storage": "0.0.6",
-    "@jenkins-cd/js-extensions": "0.0.44",
     "bluebird": "3.5.0",
     "cd": "0.3.3",
     "i18next": "3.5.2",
@@ -60,8 +58,6 @@
   },
   "devDependencies": {
     "@jenkins-cd/eslint-config-jenkins": "0.0.2",
-    "@jenkins-cd/js-builder": "0.0.63",
-    "@jenkins-cd/js-builder-jest": "0.0.4",
     "@kadira/storybook": "2.20.1",
     "@types/bluebird": "3.5.0",
     "@types/bluebird-global": "3.5.0",
@@ -83,19 +79,20 @@
     "gulp-babel": "6.1.2",
     "gulp-copy": "0.0.2",
     "gulp-eslint": "3.0.1",
+    "gulp-jest": "^4.0.2",
     "gulp-less": "3.1.0",
     "gulp-rename": "1.2.2",
     "gulp-sourcemaps": "1.6.0",
     "gulp-typescript": "4.0.1",
-    "jest": "19.0.2",
-    "jest-cli": "19.0.2",
+    "jest": "^23.5.0",
+    "jest-cli": "^23.5.0",
     "less": "2.7.2",
     "nock": "9.0.14",
     "react-addons-test-utils": "15.4.2",
     "reactify": "1.1.1",
     "run-sequence": "1.2.2",
     "sinon": "1.17.6",
-    "ts-jest": "19.0.2",
+    "ts-jest": "^23.1.4",
     "tsify": "4.0.0",
     "typescript": "2.7.2",
     "watchify": "3.7.0"
