--- a/blueocean-dashboard/package.json
+++ b/blueocean-dashboard/package.json
@@ -7,6 +7,7 @@
     "type": "git",
     "url": "https://github.com/jenkinsci/blueocean-plugin.git"
   },
+  "main": "src/main/js/index.js",
   "scripts": {
     "start-storybook": "start-storybook --static-dir ./target,./node_modules/@jenkins-cd/design-language/dist/assets/,./node_modules/@jenkins-cd/blueocean-core-js/dist/assets/",
     "storybook": "npm run start-storybook -- -p 9001",
@@ -26,8 +27,6 @@
   },
   "devDependencies": {
     "@jenkins-cd/eslint-config-jenkins": "0.0.2",
-    "@jenkins-cd/js-builder": "0.0.63",
-    "@jenkins-cd/js-builder-jest": "0.0.4",
     "@kadira/storybook": "2.20.1",
     "@types/bluebird": "3.5.0",
     "@types/bluebird-global": "3.5.0",
@@ -45,14 +44,21 @@
     "eslint-plugin-flowtype": "2.25.0",
     "eslint-plugin-react": "4.3.0",
     "gulp": "3.9.1",
+    "gulp-babel": "^7.0.1",
+    "gulp-copy": "^1.1.0",
+    "gulp-jest": "^4.0.2",
+    "gulp-less": "^4.0.1",
     "gulp-mocha": "3.0.1",
-    "jest": "19.0.2",
-    "jest-cli": "19.0.2",
+    "gulp-rename": "^1.4.0",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-typescript": "^5.0.0-alpha.3",
+    "jest": "^23.5.0",
+    "jest-cli": "^23.5.0",
     "mocha": "3.1.0",
     "react-addons-test-utils": "15.4.2",
     "reactify": "1.1.1",
     "skin-deep": "0.16.0",
-    "ts-jest": "19.0.2",
+    "ts-jest": "^23.1.4",
     "ts-node": "5.0.1",
     "tsify": "4.0.0",
     "typescript": "2.7.2"
