--- a/blueocean-web/package.json
+++ b/blueocean-web/package.json
@@ -31,7 +31,13 @@
     "eslint-plugin-react": "4.3.0",
     "giti": "1.1.3",
     "gulp": "3.9.1",
-    "gulp-typescript": "4.0.1",
+    "gulp-babel": "^8.0.0",
+    "gulp-copy": "^1.1.0",
+    "gulp-jest": "^4.0.2",
+    "gulp-less": "^4.0.1",
+    "gulp-rename": "^1.4.0",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-typescript": "^4.0.1",
     "jest": "19.0.2",
     "jquery-detached": "2.1.4-v4",
     "ncp": "2.0.0",
