--- a/blueocean-dashboard/package.json
+++ b/blueocean-dashboard/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blueocean-dashboard",
+  "name": "@jenkins-cd/blueocean-dashboard",
   "version": "0.0.1",
   "description": "Dashboard for Jenkins Blue Ocean",
   "license": "MIT",
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "https://github.com/jenkinsci/blueocean-plugin.git"
   },
-  "main": "src/main/js/index.js",
+  "main": "dist/js/index.js",
   "scripts": {
     "start-storybook": "start-storybook --static-dir ./target,./node_modules/@jenkins-cd/design-language/dist/assets/,./node_modules/@jenkins-cd/blueocean-core-js/dist/assets/",
     "storybook": "npm run start-storybook -- -p 9001",
@@ -134,5 +134,8 @@
         "tsify"
       ]
     ]
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
