--- a/blueocean-web/package.json
+++ b/blueocean-web/package.json
@@ -31,7 +31,7 @@
     "eslint-plugin-react": "4.3.0",
     "giti": "1.1.3",
     "gulp": "3.9.1",
-    "gulp-babel": "^8.0.0",
+    "gulp-babel": "^7.0.1",
     "gulp-copy": "^1.1.0",
     "gulp-jest": "^4.0.2",
     "gulp-less": "^4.0.1",
@@ -39,19 +39,26 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-typescript": "^4.0.1",
     "jest": "19.0.2",
+    "jest-cli": "^23.5.0",
     "jquery-detached": "2.1.4-v4",
     "ncp": "2.0.0",
+    "progress-bar-webpack-plugin": "^1.11.0",
     "reactify": "1.1.1",
     "ts-jest": "19.0.2",
+    "ts-loader": "^4.5.0",
     "tsify": "4.0.0",
     "typescript": "2.7.2",
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0",
     "zombie": "4.2.1"
   },
   "dependencies": {
     "@jenkins-cd/blueocean-core-js": "0.0.171",
+    "@jenkins-cd/blueocean-dashboard": "0.0.1",
     "@jenkins-cd/design-language": "0.0.162",
-    "@jenkins-cd/js-modules": "0.0.10",
     "@jenkins-cd/js-extensions": "0.0.44",
+    "@jenkins-cd/js-modules": "0.0.10",
+    "babel-loader": "^7.1.5",
     "history": "2.0.2",
     "immutable": "3.8.1",
     "keymirror": "0.1.1",
