--- a/blueocean-dashboard/package.json
+++ b/blueocean-dashboard/package.json
@@ -63,6 +63,7 @@
     "@jenkins-cd/js-modules": "0.0.10",
     "@jenkins-cd/js-extensions": "0.0.44",
     "@jenkins-cd/preferences": "0.0.4",
+    "@jenkins-cd/blueocean-pipeline-editor": "0.0.3",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "bluebird": "3.5.0",
     "immutable": "3.8.1",
