--- a/blueocean-pipeline-editor/package.json
+++ b/blueocean-pipeline-editor/package.json
@@ -1,32 +1,36 @@
 {
-  "name": "blueocean-pipeline-editor",
-  "version": "0.0.1",
+  "name": "@jenkins-cd/blueocean-pipeline-editor",
+  "version": "0.0.3",
   "description": "Pipeline editor plugin for Jenkins Blue Ocean",
+  "main": "dist/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/jenkinsci/blueocean-plugin.git"
   },
   "scripts": {
     "storybook": "start-storybook -p 9002 -s node_modules/@jenkins-cd/design-language/dist/assets/,target/classes/org/jenkins/ui/jsmodules/blueocean_pipeline_editor/",
-    "lint": "jjsbuilder --tasks lint",
-    "lint:fix": "jjsbuilder --tasks lint --fixLint",
-    "lint:watch": "jjsbuilder --tasks lint:watch --continueOnLint",
+    "lint": "gulp lint",
     "test": "gulp test",
     "test:fast": "gulp test:fast",
     "test:debug": "node --debug-brk ./node_modules/.bin/gulp test:debug",
-    "bundle": "jjsbuilder --tasks bundle",
-    "bundle:watch": "jjsbuilder --tasks bundle:watch",
-    "mvnbuild": "jjsbuilder --tasks lint,bundle",
-    "mvnbuild:fast": "jjsbuilder --tasks bundle",
-    "mvntest": "jjsbuilder --tasks test"
+    "gulp": "gulp",
+    "bundle": "gulp bundle",
+    "bundle:watch": "gulp watch",
+    "mvnbuild": "gulp lint test bundle",
+    "mvnbuild:fast": "gulp bundle",
+    "mvntest": "gulp test"
   },
   "author": "Josh McDonald <josh@joshmcdonald.info> (https://github.com/sophistifunk)",
   "license": "MIT",
+  "files": [
+    "LICENSE",
+    "README.md",
+    "dist"
+  ],
   "devDependencies": {
     "@jenkins-cd/eslint-config-jenkins": "0.0.2",
-    "@jenkins-cd/js-builder": "0.0.63",
-    "@jenkins-cd/js-builder-jest": "0.0.4",
     "@kadira/storybook": "2.20.1",
+    "@types/bluebird": "3.5.5",
     "@types/bluebird-global": "3.5.5",
     "@types/react": "15.6.14",
     "babel": "6.5.2",
@@ -36,6 +40,7 @@
     "babel-preset-es2015": "6.16.0",
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-0": "6.16.0",
+    "browserify": "13.1.0",
     "chai": "3.5.0",
     "create-hmac": "1.1.4",
     "enzyme": "2.3.0",
@@ -44,14 +49,22 @@
     "eslint-to-editorconfig": "1.2.0",
     "gulp": "3.9.1",
     "gulp-mocha": "2.2.0",
+    "gulp-babel": "6.1.2",
+    "gulp-copy": "0.0.2",
+    "gulp-eslint": "3.0.1",
+    "gulp-less": "3.1.0",
+    "gulp-rename": "1.2.2",
+    "gulp-sourcemaps": "1.6.0",
     "gulp-typescript": "4.0.1",
-    "jest": "19.0.2",
-    "jest-cli": "19.0.2",
+    "gulp-jest": "4.0.2",
+    "jest": "23.5.0",
+    "jest-cli": "23.5.0",
+    "less": "2.7.2",
     "jsdom": "7.2.2",
     "mocha": "2.4.5",
     "nock": "8.0.0",
     "react-addons-test-utils": "15.4.2",
-    "ts-jest": "19.0.2",
+    "ts-jest": "23.1.4",
     "tsify": "4.0.0",
     "typescript": "2.7.2"
   },
@@ -80,20 +93,6 @@
       "react-addons-css-transition-group@any",
       "react-dom@any",
       "react-router@any"
-    ]
-  },
-  "jest": {
-    "transform": {
-      "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js",
-      "^.+\\.jsx?$": "babel-jest"
-    },
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
     ]
   },
   "browserify": {
