--- a/blueocean-web/package.json
+++ b/blueocean-web/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "@jenkins-cd/blueocean-core-js": "0.0.171",
+    "@jenkins-cd/blueocean-pipeline-editor": "0.0.3",
     "@jenkins-cd/design-language": "0.0.162",
     "@jenkins-cd/js-modules": "0.0.10",
     "@jenkins-cd/js-extensions": "0.0.44",
