add less support and mock i18n in some components

--- a/blueocean-dashboard/package.json
+++ b/blueocean-dashboard/package.json
@@ -19,7 +19,7 @@
     "test:fast": "gulp test:fast",
     "test:debug": "node --debug-brk ./node_modules/.bin/gulp test:debug",
     "test:watch": "gulp test:debug",
-    "bundle": "gulp bundle",
+    "bundle": "gulp build",
     "bundle:watch": "gulp bundle:watch",
     "mvnbuild": "gulp lint bundle",
     "mvnbuild:fast": "gulp bundle",
