--- a/blueocean-web/package.json
+++ b/blueocean-web/package.json
@@ -27,6 +27,7 @@
     "babel-preset-stage-0": "6.16.0",
     "bluebird-global": "1.0.1",
     "create-hmac": "1.1.4",
+    "css-loader": "^1.0.0",
     "eslint": "2.13.1",
     "eslint-plugin-react": "4.3.0",
     "giti": "1.1.3",
@@ -41,6 +42,8 @@
     "jest": "19.0.2",
     "jest-cli": "^23.5.0",
     "jquery-detached": "2.1.4-v4",
+    "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.4.2",
     "ncp": "2.0.0",
     "progress-bar-webpack-plugin": "^1.11.0",
     "reactify": "1.1.1",
