--- a/blueocean-web/package.json
+++ b/blueocean-web/package.json
@@ -30,6 +30,7 @@
     "css-loader": "^1.0.0",
     "eslint": "2.13.1",
     "eslint-plugin-react": "4.3.0",
+    "file-loader": "^2.0.0",
     "giti": "1.1.3",
     "gulp": "3.9.1",
     "gulp-babel": "^7.0.1",
