--- a/blueocean-web/package.json
+++ b/blueocean-web/package.json
@@ -18,6 +18,7 @@
     "mvntest": "gulp test"
   },
   "devDependencies": {
+    "@jenkins-cd/blueocean-pipeline-editor": "0.0.3",
     "@jenkins-cd/js-builder": "0.0.63",
     "babel-eslint": "7.0.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
