fix js errors and warnings that started appearing correctly

--- a/jenkins-design-language/package.json
+++ b/jenkins-design-language/package.json
@@ -48,6 +48,9 @@
     "@jenkins-cd/blueocean-material-icons": "0.0.7",
     "linkifyjs": "2.1.4",
     "lodash.debounce": "4.0.8",
+    "mobx": "2.6.0",
+    "mobx-react": "3.5.7",
+    "mobx-react-devtools": "4.2.6",
     "moment": "2.19.3",
     "moment-duration-format": "2.2.2",
     "react": "15.4.2",
