--- a/blueocean-dashboard/package.json
+++ b/blueocean-dashboard/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "https://github.com/jenkinsci/blueocean-plugin.git"
   },
-  "main": "dist/js/index.js",
+  "main": "src/main/js/index.js",
   "scripts": {
     "start-storybook": "start-storybook --static-dir ./target,./node_modules/@jenkins-cd/design-language/dist/assets/,./node_modules/@jenkins-cd/blueocean-core-js/dist/assets/",
     "storybook": "npm run start-storybook -- -p 9001",
